# axum-sqlx-demo

./: Cargo.toml
database/: public.sql
src/: database.rs  lib.rs  main.rs  router.rs
src/common/: app_state.rs  errors.rs  mod.rs  responder.rs
src/handle/: mod.rs  user_handle.rs
src/middleware/: authenticator.rs  mod.rs
src/model/: mod.rs  user.rs
