[package]
name = "axum-sqlx-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#   axum
axum = "0.6.18"
axum-extra = "0.7.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }

#   sqlx
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "postgres" ] }

#   logger
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

#   error handling
thiserror = "1"
anyhow = "1.0"

